--- a/bash.yml
+++ b/bash.yml
@@ -33,19 +33,16 @@ pipelines:
           resources:
             - bash
         execution:
-          onStart:
-            - printenv
-#             - test "" == "value1"
-#             - test "$SECURE_ENV1" == "key"
+#           onStart:
+#             - printenv
           onExecute:
             - test "$vijay" == "kumar"
             - printen
-          onSuccess:
-#             - test "$ENV1" == "value1"
-              - printenv
-#           onFailure:
-#             - test "$ENV1" == "value1"
-#             - test "$SECURE_ENV" == "key"
+#           onSuccess:
+# #             - test "$ENV1" == "value1"
+#               - printenv
+           onFailure:
+            - printenv
 #           onComplete: #always
 #             - test "$ENV1" == "value1"
 #             - test "$SECURE_ENV" == "key"
