--- a/bash.yml
+++ b/bash.yml
@@ -37,7 +37,7 @@ pipelines:
 #             - printenv
           onExecute:
             - test "$vijay" == "kumar"
-            - printen
+            - printenv
 #           onSuccess:
 # #             - test "$ENV1" == "value1"
 #               - printenv
