--- a/bash.yml
+++ b/bash.yml
@@ -3,7 +3,7 @@ resources:
     type: gitRepo
     repoPath: vijayreddy1991/resources
     configuration:
-      integrationName: vijaykumar_github
+      integrationName: vijayku_github
       branches:
         only: master
     initialVersion:
