--- a/bash.yml
+++ b/bash.yml
@@ -14,6 +14,12 @@ pipelines:
     steps:
       - name: testbash
         type: bash
+        configuration:
+          affinityGroup: x 
+#           priority: 
+#           timeoutSeconds: <job timeout limit>
+          nodePool: custom__x86_64__Ubuntu_16.04
+          chronological: true        
         setup:
           environmentVariables:
             normal:
@@ -47,71 +53,102 @@ pipelines:
           onComplete: #always
             - test "$vijay" == "kumar"
             - printenv
-#           onCancel:
-#             - test "$ENV1" == "value1"
-#             - test "$SECURE_ENV" == "key"
+          onCancel:
+            - test "$ENV1" == "value1"
+            - test "$SECURE_ENV" == "key"
 
-# pipeline:
-#   - name: pipe1
-#     steps:
-#       - name: test_step_1
-#         type: bash
-#         configuration:
-#           affinityGroup: bldGroup 
-#           priority: <[0-10000]>
+    steps:
+      - name: testbash2
+        type: bash
+        configuration:
+          affinityGroup: x 
+#           priority: 
 #           timeoutSeconds: <job timeout limit>
-#           nodePool: <name of the nodePool>
-#           chronological: <true/false>
-#         setup:
-#           environmentVariables:
-#             normal:
-#               ENV1: value1
-#               ENV2: value2
-#             encrypted:
-#               SECURE_ENV1: <encrypted secure>
-#               SECURE_ENV2: <encrypted secure>
-#           runtime:            
-#             type: <image/host>
-#             image:
-#               auto:
-#                 language:
-#                 versions:
-#               custom:
-#                 name:
-#                 tag:
-#                 options:
+          nodePool: custom__x86_64__Ubuntu_16.04
+          chronological: true
+        setup:
+          environmentVariables:
+            normal:
+              ENV1: value1
+              ENV2: value2
+            encrypted:
+              SECURE_ENV1: <encrypted secure>
+              SECURE_ENV2: <encrypted secure>
+          runtime:            
+            type: image
+            image:
+              auto:
+                language: 
+                versions:
+              custom:
+                name:
+                tag:
+                options:
 #         requires:
 #           resources:
 #             - someStateResource
 #             - someVersionResource
-#           steps:
-#             - nightlyJob
-#             - cronJob
-#           integrations:
-#             - dockerHubIntegration
-#             - artifactoryIntegration
+    steps:
+      - name: testbash3
+        type: bash
+        configuration:
+          affinityGroup: y 
+#           priority: 
+#           timeoutSeconds: <job timeout limit>
+          nodePool: custom__x86_64__Ubuntu_18.04
+          chronological: true        
+        setup:
+          environmentVariables:
+            normal:
+              vijay: kumar  
+          runtime:            
+            type: image
+            image:
+              auto:
+                language: nodejs
+                versions: 
+                  - 8.16.0
+              custom:
+                name: drydock/c7node
+                tag: master
+                options: ""
+        triggeredBy:
+          resources:
+            - bash
+        execution:
+          onStart:
+            - printenv
+          onExecute:
+            - test "$vijay" == "kumar"
+            - printenv
+            - echo "vijay"
+          onSuccess:
+#             - test "$ENV1" == "value1"
+              - printenv
+          onFailure:
+           - printenv
+          onComplete: #always
+            - test "$vijay" == "kumar"
+            - printenv
+          onCancel:
+            - test "$ENV1" == "value1"
+            - test "$SECURE_ENV" == "key"
       
-#         triggeredBy:
-#           resources:
-#             - someGitRepoResource
-#             - someDockerImageResource
-#           steps:
-#             - ciJob
-#             - deployJob
-#         execution:
-#           onStart:
-#             - echo "Prepping build environment"
-#           onExecute:
-#             - echo "executing task command 1"
-#             - echo "executing task command 2"
-#           onSuccess:
-#             - echo "Job well done!"
-#           onFailure:
-#             - echo "uh oh, something went wrong"
-#           onComplete: #always
-#             - echo "Cleaning up some stuff"
-#           onCancel:
-#             - echo "Someone cancelled the job"
-#         outputResources:
-#           - someOutputResource
-#           - anotherOutputresource
+          steps:
+            - ciJob
+            - deployJob
+        execution:
+          onStart:
+            - echo "Prepping build environment"
+          onExecute:
+            - echo "executing task command 1"
+            - echo "executing task command 2"
+          onSuccess:
+            - echo "Job well done!"
+          onFailure:
+            - echo "uh oh, something went wrong"
+          onComplete: #always
+            - echo "Cleaning up some stuff"
+          onCancel:
+            - echo "Someone cancelled the job"
+
