--- a/bash.yml
+++ b/bash.yml
@@ -45,17 +45,17 @@ pipelines:
             - test "$vijay" == "kumar"
             - printenv
             - echo "vijay"
-          onSuccess:
+#           onSuccess:
+# #             - test "$ENV1" == "value1"
+#               - printenv
+#           onFailure:
+#            - printenv
+#           onComplete: #always
+#             - test "$vijay" == "kumar"
+#             - printenv
+#           onCancel:
 #             - test "$ENV1" == "value1"
-              - printenv
-          onFailure:
-           - printenv
-          onComplete: #always
-            - test "$vijay" == "kumar"
-            - printenv
-          onCancel:
-            - test "$ENV1" == "value1"
-            - test "$SECURE_ENV" == "key"
+#             - test "$SECURE_ENV" == "key"
 
       - name: testbash2
         type: bash
@@ -94,17 +94,17 @@ pipelines:
             - test "$vijay" == "kumar"
             - printenv
             - echo "vijay"
-          onSuccess:
+#           onSuccess:
+# #             - test "$ENV1" == "value1"
+#               - printenv
+#           onFailure:
+#            - printenv
+#           onComplete: #always
+#             - test "$vijay" == "kumar"
+#             - printenv
+#           onCancel:
 #             - test "$ENV1" == "value1"
-              - printenv
-          onFailure:
-           - printenv
-          onComplete: #always
-            - test "$vijay" == "kumar"
-            - printenv
-          onCancel:
-            - test "$ENV1" == "value1"
-            - test "$SECURE_ENV" == "key"
+#             - test "$SECURE_ENV" == "key"
             
 
       - name: testbash3
@@ -140,15 +140,15 @@ pipelines:
             - test "$vijay" == "kumar"
             - printenv
             - echo "vijay"
-          onSuccess:
-#             - test "$ENV1" == "value1"
-              - printenv
-          onFailure:
-           - printenv
-          onComplete: #always
-#             - test "$vijay" == "kumar"
-            - printenv
-          onCancel:
-#             - test "$ENV1" == "value1"
-#             - test "$SECURE_ENV" == "key"
-              - printenv
+#           onSuccess:
+# #             - test "$ENV1" == "value1"
+#               - printenv
+#           onFailure:
+#            - printenv
+#           onComplete: #always
+# #             - test "$vijay" == "kumar"
+#             - printenv
+#           onCancel:
+# #             - test "$ENV1" == "value1"
+# #             - test "$SECURE_ENV" == "key"
+#               - printenv
