--- a/bash.yml
+++ b/bash.yml
@@ -18,7 +18,7 @@ pipelines:
           affinityGroup: x 
 #           priority: 
 #           timeoutSeconds: <job timeout limit>
-          nodePool: ankul_nodes
+          nodePool: kermit_ubuntu_pool
           chronological: true        
         setup:
 #           environmentVariables:
