--- a/bash.yml
+++ b/bash.yml
@@ -113,7 +113,7 @@ pipelines:
           affinityGroup: y 
 #           priority: 
 #           timeoutSeconds: <job timeout limit>
-          nodePool: kermit_ubuntu18_pool
+          nodePool: kermit_ubuntu_pool
           chronological: true        
         setup:
 #           environmentVariables:
