--- a/bash.yml
+++ b/bash.yml
@@ -64,7 +64,7 @@ pipelines:
           priority: 2
 #           timeoutSeconds: <job timeout limit>
           nodePool: kermit_ubuntu_pool
-          chronological: true
+          chronological: false
         setup:
 #           environmentVariables:
 #             normal:
@@ -114,7 +114,7 @@ pipelines:
           priority: 1
 #           timeoutSeconds: <job timeout limit>
           nodePool: kermit_ubuntu_pool
-          chronological: true        
+          chronological: false        
         setup:
 #           environmentVariables:
 #             normal:
