--- a/bash.yml
+++ b/bash.yml
@@ -63,7 +63,7 @@ pipelines:
           affinityGroup: vijay@#$%^&*
 #           priority: 2
 #           timeoutSeconds: <job timeout limit>
-#           nodePool: kermit_ubuntu_pool
+          nodePool: kermit_ubuntu_pool
 #           chronological: false
         setup:
 #           environmentVariables:
@@ -113,7 +113,7 @@ pipelines:
           affinityGroup: kumar@#$%^&*
 #           priority: 1
 #           timeoutSeconds: <job timeout limit>
-          nodePool: kermit_ubuntu18_pool
+          nodePool: kermit_ubuntu_pool
 #           chronological: false        
         setup:
 #           environmentVariables:
