--- a/bash.yml
+++ b/bash.yml
@@ -1,7 +1,7 @@
 resources:
   - name: bash
     type: gitRepo
-    repoPath: vijayreddy1991/resources
+    repoPath: vijayreddy1991/bash
     configuration:
       integrationName: vijayku_github
       branches:
@@ -18,7 +18,7 @@ pipelines:
           affinityGroup: vijay@#$%^&*
 #           priority: 3
           nodePool: kermit_ubuntu_pool
-          chronological: false       
+          chronological: true     
         setup:
 #           environmentVariables:
 #             normal:
