--- a/bash.yml
+++ b/bash.yml
@@ -26,12 +26,12 @@ pipelines:
           runtime:            
             type: image
             image:
-              auto:
-                language: nodejs
-                versions: 
-                  - 8.16.0
+#               auto:
+#                 language: nodejs
+#                 versions: 
+#                   - 8.16.0
               custom:
-                name: drydock/c7node
+                name: vijaydocker1991/w19node
                 tag: master
                 options: ""
         triggeredBy:
