--- a/bash.yml
+++ b/bash.yml
@@ -33,7 +33,11 @@ pipelines:
               custom:
                 name: vijaydocker1991/w19node
                 tag: master
-                options: ""
+                  options: ""
+        requires:                  
+          integrations:
+            - vijaydocker
+       
         triggeredBy:
           resources:
             - bash
