--- a/bash.yml
+++ b/bash.yml
@@ -48,7 +48,7 @@ pipelines:
 #             - test "$vijay" == "kumar"
             - printenv
             - echo "vijay"
-            - java --version
+            - java -version
 
       - name: testbash2
         type: bash
