--- a/bash.yml
+++ b/bash.yml
@@ -31,7 +31,7 @@ pipelines:
 #                 versions: 
 #                   - 8.16.0
               custom:
-                name: vijaydocker1991/javaimage
+                name: node
                 tag: latest
                 options: ""
         requires:                  
